src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts.expected
-----------------
INPUT
----------------- 
/** @gqlField */
export function greeting(thing: IThing): string {
  return `Hello ${thing.name}!`;
}

/** @gqlInterface */
interface IThing {
  name: string;
  // Should have greeting added
}

/**
 * @gqlInterface
 */
interface IPerson extends IThing {
  name: string;
  // Should have greeting added
}

/** @gqlType */
class User implements IPerson, IThing {
  __typename: "User";
  name: string;
  // Should have greeting added
}

/** @gqlType */
class Admin implements IPerson, IThing {
  __typename: "Admin";
  name: string;
  // Should have greeting added
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:15:1 - error: Type IPerson must define one or more fields.

15 interface IPerson extends IThing {
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
16   name: string;
   ~~~~~~~~~~~~~~~
17   // Should have greeting added
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
18 }
   ~
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:2:1 - error: Interface field IThing.greeting expected but IPerson does not provide it.

2 export function greeting(thing: IThing): string {
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3   return `Hello ${thing.name}!`;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 }
  ~

  src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:15:1
    15 interface IPerson extends IThing {
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    16   name: string;
       ~~~~~~~~~~~~~~~
    17   // Should have greeting added
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    18 }
       ~
    Related location
